# abitus

./: .gitignore  README.md  mise.toml  pyproject.toml  pytest.ini
src/: main.py
src/components/: __init__.py  achievement_badge.py  quest_card.py  stat_bar.py
src/data/: interview_questions.json  quest_templates.json
src/models/: __init__.py  achievement.py  character.py  journal.py  quest.py  stats.py
src/services/: __init__.py  interview.py  journal.py  progression.py  quest_generator.py  storage.py
src/utils/: __init__.py  compat.py
src/views/: __init__.py  assessment.py  character.py  home.py  interview.py  journal.py  quests.py  settings.py
tests/: __init__.py  conftest.py  test_onboarding.py  test_quests.py
