[project]
name = "abitus"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet>=0.80.1"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.1",
]
test = [
  "pytest>=8.0",
  "pytest-playwright>=0.5.0",
  "pytest-asyncio>=0.24.0",
]

[tool.flet]
org = "com.mycompany"
product = "abitus"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"